--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -16,10 +16,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.6.17",
+    "storybook-addon-root-attributes": "^2.1.3",
     "vite": "^5.1.4"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build": "storybook build"
   }
 }
