--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -23,5 +23,8 @@
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "build": "storybook build"
+  },
+  "dependencies": {
+    "@soaf/react-hooks-button": "workspace:^"
   }
 }
