--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "graph": "nx run-many --target=build --graph",
     "dev:all": "yarn dev:storybook & yarn dev:packages",
     "dev:storybook": "nx storybook @soaf/storybook",
-    "dev:packages": "nx run-many --target=dev --projects='@soaf/react-components-*'"
+    "dev:packages": "nx run-many --target=dev --projects='@soaf/react-hooks-*, @soaf/react-components-*'"
   },
   "packageManager": "yarn@4.1.0",
   "devDependencies": {
