chore : Add @soaf/react-components-input package

--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@soaf/react-components-accordion": "workspace:^",
+    "@soaf/react-components-input": "workspace:^",
     "@soaf/react-hooks-button": "workspace:^"
   }
 }
