--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@soaf/react-components-accordion": "workspace:^",
     "@soaf/react-components-input": "workspace:^",
+    "@soaf/react-components-select": "workspace:^",
     "@soaf/react-hooks-button": "workspace:^"
   }
 }
