--- a/services/soaf_web/package.json
+++ b/services/soaf_web/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stackflow/core": "^1.0.10",
+    "@stackflow/plugin-basic-ui": "^1.5.3",
+    "@stackflow/plugin-renderer-basic": "^1.1.8",
+    "@stackflow/react": "^1.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
