--- a/services/soaf_web/tsconfig.json
+++ b/services/soaf_web/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.service.json",
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -18,7 +19,17 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/src/*": ["src/*"],
+      "@/src/pages/*": ["src/pages/*"],
+      "@/src/shared/*": ["src/shared/*"],
+      "@/src/features/*": ["src/features/*"],
+      "@/src/assets/*": ["src/assets/*"],
+      "@/src/libs/*": ["src/libs/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
