--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@soaf/themes",
+  "name": "@sossost/themes",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.js",
@@ -19,7 +19,7 @@
     "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "@soaf/esbuild-config": "workspace:^",
+    "@sossost/esbuild-config": "workspace:^",
     "typescript": "^5.3.3"
   }
 }
