--- a/packages/react/components/select/package.json
+++ b/packages/react/components/select/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@soaf/react-components-select",
+  "name": "@sossost/react-components-select",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.js",
@@ -19,8 +19,8 @@
     "dev": "yarn build:js --watch && yarn build:type --watch"
   },
   "devDependencies": {
-    "@soaf/esbuild-config": "workspace:^",
-    "@soaf/themes": "workspace:^",
+    "@sossost/esbuild-config": "workspace:^",
+    "@sossost/themes": "workspace:^",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@vanilla-extract/css": "^1.14.1",
@@ -33,11 +33,11 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "@soaf/themes": "workspace:^",
+    "@sossost/themes": "workspace:^",
     "react": "*"
   },
   "dependencies": {
-    "@soaf/react-hooks-select": "workspace:^",
+    "@sossost/react-hooks-select": "workspace:^",
     "clsx": "^2.1.0"
   }
 }
