--- a/packages/react/hooks/button/package.json
+++ b/packages/react/hooks/button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@soaf/react-hooks-button",
+  "name": "@sossost/react-hooks-button",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.js",
@@ -18,7 +18,7 @@
     "dev": "yarn build:js --watch && yarn build:type --watch"
   },
   "devDependencies": {
-    "@soaf/esbuild-config": "workspace:^",
+    "@sossost/esbuild-config": "workspace:^",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "react": "^18.2.0",
@@ -29,7 +29,7 @@
     "react": "*"
   },
   "dependencies": {
-    "@soaf/react-hooks-toggle": "workspace:^",
+    "@sossost/react-hooks-toggle": "workspace:^",
     "clsx": "^2.1.0"
   }
 }
