--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dev:storybook": "nx storybook @sossost/storybook",
     "dev:packages": "nx run-many --target=dev --projects='@sossost/react-hooks-*, @sossost/react-components-*'"
   },
-  "packageManager": "yarn@4.1.0",
   "devDependencies": {
     "@storybook/addon-docs": "^7.6.17",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
@@ -28,6 +27,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "nx": "^18.0.6",
     "prettier": "^3.0.3",
-    "typescript": "^5.3.3"
-  }
+    "typescript": "^5.4.3"
+  },
+  "packageManager": "yarn@4.1.1"
 }
