--- a/packages/esbuild-config/package.json
+++ b/packages/esbuild-config/package.json
@@ -6,8 +6,7 @@
     "index.js"
   ],
   "scripts": {
-    "build": "echo \"Tada!\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo \"Tada!\""
   },
   "dependencies": {
     "esbuild": "0.16.17"
